--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -22,6 +22,17 @@
     
   
   tasks:
+    # Debug what we received from workflow
+    - name: Debug input variables
+      debug:
+        msg:
+          - "vm_hostnames_json defined: {{ vm_hostnames_json is defined }}"
+          - "vm_hostnames_json value: {{ vm_hostnames_json | default('NOT SET') }}"
+          - "target_hostname defined: {{ target_hostname is defined }}"
+          - "target_hostname value: {{ target_hostname | default('NOT SET') }}"
+          - "TS_AUTHKEY env: {{ lookup('env', 'TS_AUTHKEY') | default('NOT SET') }}"
+      run_once: true
+    
     # In multi-instance mode, we need to map each host to its hostname
     # The workflow passes vm_hostnames_json as a map: {"node1": "patroni-prod-node1", "node2": "patroni-prod-node2"}
     # We'll use the inventory position to assign hostnames in order
